<resources>
    <string name="app_name">NotePad</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="title">Title</string>
    <string name="login_with_mobile">Login With Mobile</string>
    <string name="login_page">Login Page</string>
    <string name="internet_error">Please Connect Internet</string>
    <string name="sort">Sort</string>
    <string name="list">list</string>
    <string name="grid">Grid</string>
    <string name="view_as">View as</string>
    <string name="text">Text</string>
    <string name="modified_time">Modified Time</string>
    <string name="notes">Notes</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="generate_otp">Generate Otp</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code!!</string>
    <string name="logout">Logout</string>
</resources>