<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/generateOtpLayout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20sp"
                    android:text="@string/mobile_number_verification"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/actionBar" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:background="@drawable/login_btn_round"
                android:hint="@string/enter_mobile_number"
                android:maxLength="10"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/actionBar" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:id="@+id/generateOtp"
                android:enabled="false"
                android:background="@color/disabled_btn"
                android:text="@string/generate_otp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/mobileNumber" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/otpVerification"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/actionBarOtp"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20sp"
                    android:text="@string/mobile_number_verification"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/actionBarOtp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/otpNumber"
                app:layout_constraintTop_toBottomOf="@id/actionBarOtp"
                android:layout_marginTop="100dp"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/otp2"
                    android:layout_width="50dp"
                    android:padding="10dp"
                    android:id="@+id/otp1"
                    android:gravity="center"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp1"
                    app:layout_constraintEnd_toStartOf="@id/otp3"
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/otp2"
                    android:layout_marginStart="10dp"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp2"
                    app:layout_constraintEnd_toStartOf="@id/otp4"
                    android:layout_width="50dp"
                    android:padding="10dp"
                    android:id="@+id/otp3"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp3"
                    app:layout_constraintEnd_toStartOf="@id/otp5"
                    android:layout_width="50dp"
                    android:padding="10dp"
                    android:id="@+id/otp4"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp4"
                    app:layout_constraintEnd_toStartOf="@id/otp6"
                    android:layout_width="50dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:id="@+id/otp5"
                    android:layout_marginStart="10dp"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="50dp"
                    android:padding="10dp"
                    android:id="@+id/otp6"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:maxLength="1"
                    android:background="@drawable/login_btn_round"
                    android:textSize="16sp"
                    android:layout_height="50dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:id="@+id/submit"
                android:enabled="false"
                android:background="@color/disabled_btn"
                android:text="Verify otp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/otpNumber" />

            <RelativeLayout
                android:id="@+id/progressLay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="70dp"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:layout_height="70dp">

                <ProgressBar
                    android:id="@+id/mobileNumberVerificationCountDown"
                    android:layout_width="match_parent"
                    android:max="120"
                    android:progress="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/circle_drawable"
                    android:layout_height="match_parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="120"
                    android:id="@+id/progressText"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"/>
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressLay"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/resentCode"
                android:enabled="false"
                android:text="@string/resend_code"
                android:textColor="@color/disabled_btn"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"/>






        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>